--- a/src/article.html
+++ b/src/article.html
@@ -71,10 +71,14 @@
                     <div class="article__text">
                     </div>
                     <div class="article__stats">
-                        <img class="icon" src="assets/icons/views.png" alt="">
-                        <span class="article__views"></span>
-                        <img class="icon" src="assets/icons/comments.png" alt="">
-                        <span class="article__comments"></span>
+                        <div>
+                            <img class="icon" src="assets/icons/views.png" alt="">
+                            <span class="article__views"></span>
+                        </div>
+                        <div>
+                            <img class="icon" src="assets/icons/comments.png" alt="">
+                            <span class="article__comments"></span>
+                        </div>
                     </div>
                 </div>
             </section>
